# game-ai

./: CMakeLists.txt
src/: BaseGameEntity.cpp  BaseGameEntity.h  GameWorld.cpp  GameWorld.h  MovingEntity.h  Renderer.cpp  Renderer.h  SteeringBehaviors.cpp  SteeringBehaviors.h  Vehicle.cpp  Vehicle.h  main.cpp
src/behaviors/align/: Align.cpp  Align.h  AlignDemo.h
src/behaviors/arrive/: Arrive.cpp  Arrive.h  ArriveDemo.h
src/behaviors/collision-avoidance/: CollisionAvoidance.cpp  CollisionAvoidance.h  CollisionAvoidanceDemo.h
src/behaviors/common/: Demo.h  Entity.cpp  Entity.h  StaticEntity.h  Steering.h  SteeringOutput.h
src/behaviors/face/: Face.cpp  Face.h  FaceDemo.h
src/behaviors/follow-path/: FollowPath.cpp  FollowPath.h  FollowPathDemo.h  Path.h
src/behaviors/look-ahead/: LookAhead.cpp  LookAhead.h
src/behaviors/seek/: Seek.cpp  Seek.h  SeekDemo.h
src/behaviors/separation/: Separation.cpp  Separation.h  SeparationDemo.h
src/behaviors/wander/: Wander.cpp  Wander.h  WanderDemo.h
src/core/input/: InputManager.cpp  InputManager.h
src/core/renderer/: Renderer.cpp
src/crosshair/: Crosshair.h
src/demos/: ArriveDemo.h  Demo.h  SeekDemo.h
src/entities/: Obstacle.h
src/game-world/: GameWorld.cpp  GameWorld.h
src/game-world/crosshair/: Crosshair.h
src/input/: InputManager.cpp  InputManager.h
src/kinematic/align/: KinematicAlign.cpp  KinematicAlign.h  KinematicAlignDemo.h
src/kinematic/arrive/: KinematicArrive.cpp  KinematicArrive.h  (+1 more)
src/params/: Params.cpp  Params.h
src/renderer/: Renderer.h
src/util/: Util.h  Vector2.h
(+12 files in other folders)
